---------------------------
  Jackdmp changes log
---------------------------

2006-09-23  Stephane Letz  <letz@grame.fr>

	* Rename global "verbose" in "jack_verbose" to avoid symbol clash with PureData.

2006-09-20  Stephane Letz  <letz@grame.fr>

	* On Windows, avoid to use the unsafe Kill thread method. Use thread Stop instead and have blocked IO be unlocked. 
	* Still get RT thread termination problems, restore a version that works on OSX and Linux with conditionnal compilation for now.

2006-09-16  Stephane Letz  <letz@grame.fr>

	* Restore behaviour of LoopBack driver, which has to be opened in any case...

2006-09-15  Stephane Letz  <letz@grame.fr>

	* On Windows version, use signal to quit the server.

2006-09-13  Stephane Letz  <letz@grame.fr>

	* Correct pipe destruction bug in JackWinNamedPipe class.

2006-09-11  Stephane Letz  <letz@grame.fr>

	* Handling of LoopBack driver only when really needed.
	* Correct crash bug when closing clients on Windows due to multi-threading synchronization issues.

2006-09-06  Stephane Letz  <letz@grame.fr>

	* Correct coreaudio driver (input was not working since 0.55 version).
	* Version for 0.58 release.

2006-09-04  Stephane Letz  <letz@grame.fr>

	* Correct Windows VC++ projects.

2006-09-03  Stephane Letz  <letz@grame.fr>

	* First import of version 0.58 base code