@@ -25,11 +25,12 @@
 				4BFA994A0AAAED90009E916C /* PBXTargetDependency */,
 				4BFA994C0AAAED90009E916C /* PBXTargetDependency */,
 				4BFA994E0AAAED90009E916C /* PBXTargetDependency */,
+				4BFA99560AAAED90009E916C /* PBXTargetDependency */,
+				4BE99D630AD7A19100C59091 /* PBXTargetDependency */,
 				4BFA99AC0AAAF41D009E916C /* PBXTargetDependency */,
 				4BFA99500AAAED90009E916C /* PBXTargetDependency */,
 				4BFA99520AAAED90009E916C /* PBXTargetDependency */,
 				4BFA99540AAAED90009E916C /* PBXTargetDependency */,
-				4BFA99560AAAED90009E916C /* PBXTargetDependency */,
 				4BFA99580AAAED90009E916C /* PBXTargetDependency */,
 				4BFA995A0AAAED90009E916C /* PBXTargetDependency */,
 				4BFA995C0AAAED90009E916C /* PBXTargetDependency */,
@@ -250,6 +251,7 @@
 		4BD4B4E409BACEF300750C0F /* JackTransportEngine.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4BD4B4D509BACD9600750C0F /* JackTransportEngine.cpp */; };
 		4BD4B4E509BACEF300750C0F /* JackTransportEngine.h in Headers */ = {isa = PBXBuildFile; fileRef = 4BD4B4D409BACD9600750C0F /* JackTransportEngine.h */; };
 		4BE6C6AD0A3E0A65005A203A /* jack_test.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4BE6C6AC0A3E0A65005A203A /* jack_test.cpp */; };
+		4BE99D410AD7A0E700C59091 /* cpu.c in Sources */ = {isa = PBXBuildFile; fileRef = 4BE99D400AD7A0E700C59091 /* cpu.c */; };
 		4BFA99600AAAEE5C009E916C /* transport.h in Headers */ = {isa = PBXBuildFile; fileRef = 4BF8D21C0834F04800C94B91 /* transport.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		4BFA99610AAAEE5E009E916C /* types.h in Headers */ = {isa = PBXBuildFile; fileRef = 4BF8D21B0834F04800C94B91 /* types.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		4BFA99620AAAEE72009E916C /* jack.h in Headers */ = {isa = PBXBuildFile; fileRef = 4BF8D2170834F03500C94B91 /* jack.h */; settings = {ATTRIBUTES = (Public, ); }; };
@@ -308,6 +310,13 @@
 			proxyType = 1;
 			remoteGlobalIDString = 4B978DB10A31CF4A009E2DD1;
 			remoteInfo = "jack_portaudio Universal";
+		};
+		4BE99D620AD7A19100C59091 /* PBXContainerItemProxy */ = {
+			isa = PBXContainerItemProxy;
+			containerPortal = 08FB7793FE84155DC02AAC07 /* Project object */;
+			proxyType = 1;
+			remoteGlobalIDString = 4BE99D260AD7A04800C59091;
+			remoteInfo = "jack_cpu Universal";
 		};
 		4BFA99430AAAED90009E916C /* PBXContainerItemProxy */ = {
 			isa = PBXContainerItemProxy;
@@ -483,6 +492,8 @@
 		4BD561C708EEB910006BBC2A /* JackSynchro.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = JackSynchro.h; path = ../common/JackSynchro.h; sourceTree = SOURCE_ROOT; };
 		4BE6C6A30A3E096F005A203A /* jack_test */ = {isa = PBXFileReference; explicitFileType = "compiled.mach-o.executable"; includeInIndex = 0; path = jack_test; sourceTree = BUILT_PRODUCTS_DIR; };
 		4BE6C6AC0A3E0A65005A203A /* jack_test.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; name = jack_test.cpp; path = ../tests/jack_test.cpp; sourceTree = SOURCE_ROOT; };
+		4BE99D300AD7A04800C59091 /* jack_cpu */ = {isa = PBXFileReference; explicitFileType = "compiled.mach-o.executable"; includeInIndex = 0; path = jack_cpu; sourceTree = BUILT_PRODUCTS_DIR; };
+		4BE99D400AD7A0E700C59091 /* cpu.c */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.c; name = cpu.c; path = "../example-clients/cpu.c"; sourceTree = SOURCE_ROOT; };
 		4BEE0B2C08ACBB9F00D22B43 /* JackPosixSemaphore.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; name = JackPosixSemaphore.cpp; path = ../common/JackPosixSemaphore.cpp; sourceTree = SOURCE_ROOT; };
 		4BEE0B2D08ACBB9F00D22B43 /* JackPosixSemaphore.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = JackPosixSemaphore.h; path = ../common/JackPosixSemaphore.h; sourceTree = SOURCE_ROOT; };
 		4BF3937C0626BF3600CC67FA /* JackMacLibClientRPC.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; path = JackMacLibClientRPC.cpp; sourceTree = SOURCE_ROOT; };
@@ -705,6 +716,13 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		4BE99D2A0AD7A04800C59091 /* Frameworks */ = {
+			isa = PBXFrameworksBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 		4BFA999C0AAAF3B0009E916C /* Frameworks */ = {
 			isa = PBXFrameworksBuildPhase;
 			buildActionMask = 2147483647;
@@ -778,6 +796,7 @@
 				4B978DBB0A31CF4A009E2DD1 /* jack_portaudio.so */,
 				4BE6C6A30A3E096F005A203A /* jack_test */,
 				4BFA99A20AAAF3B0009E916C /* jdelay */,
+				4BE99D300AD7A04800C59091 /* jack_cpu */,
 			);
 			name = Products;
 			sourceTree = "<group>";
@@ -785,6 +804,7 @@
 		4B03383E0797E19900686131 /* Simple clients */ = {
 			isa = PBXGroup;
 			children = (
+				4BE99D400AD7A0E700C59091 /* cpu.c */,
 				4B60CE480AAABA31004956AA /* connect.c */,
 				4BF8D1670834EDD900C94B91 /* zombie.c */,
 				4BF8D1690834EDE600C94B91 /* lsp.c */,
@@ -1334,6 +1354,13 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		4BE99D270AD7A04800C59091 /* Headers */ = {
+			isa = PBXHeadersBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 		4BFA99990AAAF3B0009E916C /* Headers */ = {
 			isa = PBXHeadersBuildPhase;
 			buildActionMask = 2147483647;
@@ -1700,6 +1727,25 @@
 			productReference = 4BE6C6A30A3E096F005A203A /* jack_test */;
 			productType = "com.apple.product-type.tool";
 		};
+		4BE99D260AD7A04800C59091 /* jack_cpu Universal */ = {
+			isa = PBXNativeTarget;
+			buildConfigurationList = 4BE99D2C0AD7A04800C59091 /* Build configuration list for PBXNativeTarget "jack_cpu Universal" */;
+			buildPhases = (
+				4BE99D270AD7A04800C59091 /* Headers */,
+				4BE99D280AD7A04800C59091 /* Sources */,
+				4BE99D2A0AD7A04800C59091 /* Frameworks */,
+				4BE99D2B0AD7A04800C59091 /* Rez */,
+			);
+			buildRules = (
+			);
+			dependencies = (
+			);
+			name = "jack_cpu Universal";
+			productInstallPath = /usr/local/bin;
+			productName = testSem;
+			productReference = 4BE99D300AD7A04800C59091 /* jack_cpu */;
+			productType = "com.apple.product-type.tool";
+		};
 		4BFA99980AAAF3B0009E916C /* jdelay Universal */ = {
 			isa = PBXNativeTarget;
 			buildConfigurationList = 4BFA999E0AAAF3B0009E916C /* Build configuration list for PBXNativeTarget "jdelay Universal" */;
@@ -1744,6 +1790,7 @@
 				4B699D27097D421600A18468 /* testSem Universal */,
 				4B699D3F097D421600A18468 /* zombie Universal */,
 				4BE6C6910A3E096F005A203A /* jack_test Universal */,
+				4BE99D260AD7A04800C59091 /* jack_cpu Universal */,
 				4B699D4F097D421600A18468 /* synchroServer Universal */,
 				4B699D67097D421600A18468 /* synchroClient Universal */,
 				4B699D7F097D421700A18468 /* synchroServerClient Universal */,
@@ -1878,6 +1925,13 @@
 			runOnlyForDeploymentPostprocessing = 0;
 		};
 		4BE6C69E0A3E096F005A203A /* Rez */ = {
+			isa = PBXRezBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
+		4BE99D2B0AD7A04800C59091 /* Rez */ = {
 			isa = PBXRezBuildPhase;
 			buildActionMask = 2147483647;
 			files = (
@@ -2142,6 +2196,14 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		4BE99D280AD7A04800C59091 /* Sources */ = {
+			isa = PBXSourcesBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+				4BE99D410AD7A0E700C59091 /* cpu.c in Sources */,
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 		4BFA999A0AAAF3B0009E916C /* Sources */ = {
 			isa = PBXSourcesBuildPhase;
 			buildActionMask = 2147483647;
@@ -2187,6 +2249,11 @@
 			isa = PBXTargetDependency;
 			target = 4B978DB10A31CF4A009E2DD1 /* jack_portaudio Universal */;
 			targetProxy = 4B978E7F0A31D8B7009E2DD1 /* PBXContainerItemProxy */;
+		};
+		4BE99D630AD7A19100C59091 /* PBXTargetDependency */ = {
+			isa = PBXTargetDependency;
+			target = 4BE99D260AD7A04800C59091 /* jack_cpu Universal */;
+			targetProxy = 4BE99D620AD7A19100C59091 /* PBXContainerItemProxy */;
 		};
 		4BFA99440AAAED90009E916C /* PBXTargetDependency */ = {
 			isa = PBXTargetDependency;
@@ -4353,6 +4420,92 @@
 			};
 			name = Default;
 		};
+		4BE99D2D0AD7A04800C59091 /* Development */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				ARCHS = (
+					ppc,
+					i386,
+				);
+				COPY_PHASE_STRIP = NO;
+				GCC_DYNAMIC_NO_PIC = NO;
+				GCC_ENABLE_FIX_AND_CONTINUE = YES;
+				GCC_GENERATE_DEBUGGING_SYMBOLS = YES;
+				GCC_OPTIMIZATION_LEVEL = 0;
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = (
+					"-framework",
+					Jackmp,
+				);
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = jack_cpu;
+				REZ_EXECUTABLE = YES;
+				SDKROOT = /Developer/SDKs/MacOSX10.4u.sdk;
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+				ZERO_LINK = YES;
+			};
+			name = Development;
+		};
+		4BE99D2E0AD7A04800C59091 /* Deployment */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				ARCHS = (
+					ppc,
+					i386,
+				);
+				COPY_PHASE_STRIP = YES;
+				GCC_ENABLE_FIX_AND_CONTINUE = NO;
+				GCC_OPTIMIZATION_LEVEL = 3;
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = (
+					"-framework",
+					Jackmp,
+				);
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = jack_cpu;
+				REZ_EXECUTABLE = YES;
+				SDKROOT = /Developer/SDKs/MacOSX10.4u.sdk;
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+				ZERO_LINK = NO;
+			};
+			name = Deployment;
+		};
+		4BE99D2F0AD7A04800C59091 /* Default */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				ARCHS = (
+					ppc,
+					i386,
+				);
+				GCC_OPTIMIZATION_LEVEL = 3;
+				OTHER_CFLAGS = "";
+				OTHER_LDFLAGS = (
+					"-framework",
+					Jackmp,
+				);
+				OTHER_REZFLAGS = "";
+				PRODUCT_NAME = jack_cpu;
+				REZ_EXECUTABLE = YES;
+				SDKROOT = /Developer/SDKs/MacOSX10.4u.sdk;
+				SECTORDER_FLAGS = "";
+				WARNING_CFLAGS = (
+					"-Wmost",
+					"-Wno-four-char-constants",
+					"-Wno-unknown-pragmas",
+				);
+			};
+			name = Default;
+		};
 		4BFA999F0AAAF3B0009E916C /* Development */ = {
 			isa = XCBuildConfiguration;
 			buildSettings = {
@@ -4649,6 +4802,16 @@
 				4BE6C6A00A3E096F005A203A /* Development */,
 				4BE6C6A10A3E096F005A203A /* Deployment */,
 				4BE6C6A20A3E096F005A203A /* Default */,
+			);
+			defaultConfigurationIsVisible = 0;
+			defaultConfigurationName = Default;
+		};
+		4BE99D2C0AD7A04800C59091 /* Build configuration list for PBXNativeTarget "jack_cpu Universal" */ = {
+			isa = XCConfigurationList;
+			buildConfigurations = (
+				4BE99D2D0AD7A04800C59091 /* Development */,
+				4BE99D2E0AD7A04800C59091 /* Deployment */,
+				4BE99D2F0AD7A04800C59091 /* Default */,
 			);
 			defaultConfigurationIsVisible = 0;
 			defaultConfigurationName = Default;
